test/compiler/pass/_fdecl.ods
do call = (x, y) ->
  do print("Hello, world!")
  return x + y

do no_args = () -> return void

do x = call(40, 2)
do print(x)
do no_args()
