test/compiler/fail/_rec_return_change.ods
do f = (x) ->
  do !f(2)
  return 2
